[gd_scene load_steps=5 format=3 uid="uid://drjilaesiq5nx"]

[ext_resource type="Script" uid="uid://gjetv1h52mau" path="res://Assets/Scripts/fake_mothman.gd" id="1_3moqr"]
[ext_resource type="PackedScene" uid="uid://cbw6jv845veio" path="res://Assets/Models/Mothman/MothmanFBX.fbx" id="2_uj7hj"]
[ext_resource type="AudioStream" uid="uid://fnaf25a1atlt" path="res://Assets/SFX/2025-04-10 11-41-52.mp3" id="3_75a1b"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_66xu5"]
height = 3.21092

[node name="FakeMothman" type="RigidBody3D" groups=["Living"]]
script = ExtResource("1_3moqr")

[node name="MothmanFBX" parent="." instance=ExtResource("2_uj7hj")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -1.10962, -0.288567, 0.280424)

[node name="FakemothmanCol" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.46045, 0)
shape = SubResource("CylinderShape3D_66xu5")

[node name="HighlightTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="MothManNoises" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_75a1b")
volume_db = -15.0
autoplay = true
max_distance = 35.0

[node name="Skybeam" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
visible = false
light_color = Color(0, 1, 0.36862746, 1)
light_energy = 16.0
light_volumetric_fog_energy = 8.0
spot_range = 1000.0
spot_attenuation = 0.0
spot_angle = 10.0
spot_angle_attenuation = 1.2831112e-05

[connection signal="timeout" from="HighlightTimer" to="." method="_on_highlight_timer_timeout"]
